# launch-ssh

./: CMakeLists.txt  Makefile  README.md
debian/: control  launch-ssh.desktop
src/: App.cpp  App.hpp  HistoryFile.cpp  HistoryFile.hpp  MainFrame.cpp  MainFrame.hpp  icon.h  resources.rc  strnatcmp.c  strnatcmp.h
